# polyend-play-vibe-soundpack

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  soundpack-manager-spec.md
soundpack/: __init__.py  audio.py  cli.py  config.py  db.py  exporter.py  generator.py  map.py  tagger.py
soundpack/web/: __init__.py  server.py
soundpack/web/static/: index.html
tests/: test_audio.py  test_cli.py  test_config.py  test_db.py  test_exporter.py  test_generator.py  test_map.py  test_tagger.py
